frontend/test/should_fail/iterated_004.grg
test t
{
	x:Node;
	multiple
	{
		alternative {
			Empty {
			}
			Something {
				.;
			}
		}
	}
}